maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: unclosed comment
/*var Largeur = getMondeLargeur()
^ShortestPathMaze:2: error: unclosed comment
/*var Largeur = getMondeLargeur()
^ShortestPathMaze:2: error: unclosed comment
/*var Largeur = getMondeLargeur()
^ShortestPathMaze:108: error: '}' expected but eof found.
}
 ^